--- a/PhotoHistory/Views/Photo/Index.cshtml
+++ b/PhotoHistory/Views/Photo/Index.cshtml
@@ -24,13 +24,13 @@
 <table class="table">
     <tr>
         <th>
+            Photo
+        </th>
+        <th>
             Photo Name
         </th>
         <th>
             Photo Date
-        </th>
-        <th>
-            Photo Location
         </th>
         <th></th>
     </tr>
@@ -39,15 +39,13 @@
     {
         <tr>
             <td>
+                <img src="@Html.DisplayFor(modelItem => item.PhotoStorageLocation)" width="50" />
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.PhotoName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhotoDate)
-            </td>
-            <td>
-                <a>
-                    @Html.DisplayFor(modelItem => item.PhotoStorageLocation)
-                </a>
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.PhotoId }) |
