--- a/PhotoHistory/Views/Photo/Index.cshtml
+++ b/PhotoHistory/Views/Photo/Index.cshtml
@@ -39,7 +39,7 @@
     {
         <tr>
             <td>
-                <img src="@Html.DisplayFor(modelItem => item.PhotoStorageLocation)" width="50" />
+                <img src="@Html.DisplayFor(modelItem => item.Image)" width="50" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PhotoName)
