--- a/PhotoHistory/Views/Home/Index.cshtml
+++ b/PhotoHistory/Views/Home/Index.cshtml
@@ -1,18 +1,24 @@
-﻿@{
+﻿@model IEnumerable<PhotoHistory.Models.PhotoList>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
-@*<div class="jumbotron">
-    <h1>PhotoHistory</h1>
-    <p class="lead">Photos digitized to last</p>
+<div class="jumbotron">
+    <h1>TRACEd</h1>
+    @*<p class="lead">Photos digitized to last</p>*@
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            info here
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-</div>*@
+<div>
+
+</div>
+
+@*<div class="row">
+        <div class="col-md-4">
+            <h2>Getting started</h2>
+            <p>
+                info here
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        </div>
+    </div>*@
