--- a/PhotoHistory/Views/Photo/Create.cshtml
+++ b/PhotoHistory/Views/Photo/Create.cshtml
@@ -39,10 +39,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.PhotoStorageLocation, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.PhotoStorageLocation, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PhotoStorageLocation, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
         </div>
     </div>
 
