bug fixes for tags

--- a/PhotoHistory/Custom/OverrideBootstrap.css
+++ b/PhotoHistory/Custom/OverrideBootstrap.css
@@ -40,6 +40,10 @@
     width: 100%;
 }
 
+.detail-photo {
+    width: 95%;
+}
+
 @media (max-width: 768px) {
     #account-icon {
         float: right;
