--- a/PhotoHistory/Views/Photo/Details.cshtml
+++ b/PhotoHistory/Views/Photo/Details.cshtml
@@ -47,7 +47,7 @@
         </dt>
 
         <dd>
-            <img alt="Image" src="@Url.Content("~/UploadedPhotos/" + @Html.DisplayFor(modelItem => Model.Image))">
+            <img alt="Image" src="@Url.Content("~/UploadedPhotos/" + @Html.DisplayFor(modelItem => Model.Image))" class="detail-photo">
         </dd>
 
         <dt>
