--- a/PhotoHistory/Views/Photo/Index.cshtml
+++ b/PhotoHistory/Views/Photo/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using System.Linq;
-
-@model IEnumerable<PhotoHistory.Models.PhotoList>
+﻿@model IEnumerable<PhotoHistory.Models.PhotoList>
 
 @{
     ViewBag.Title = "Index";
@@ -34,9 +32,6 @@
         <th>
             Photo Date
         </th>
-        <th>
-            Tags
-        </th>
         <th></th>
     </tr>
 
@@ -51,9 +46,6 @@
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.PhotoDate)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Tags)
     </td>
     <td>
         @Html.ActionLink("Edit", "Edit", new { id = item.PhotoId }) |
