--- a/PhotoHistory/Views/Home/Index.cshtml
+++ b/PhotoHistory/Views/Home/Index.cshtml
@@ -4,21 +4,8 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>TRACEd</h1>
-    @*<p class="lead">Photos digitized to last</p>*@
+<div class="home-button">
+<a href="~/Photo/Index" class="btn btn-default">
+    View Photos Here
+</a>
 </div>
-
-<div>
-
-</div>
-
-@*<div class="row">
-        <div class="col-md-4">
-            <h2>Getting started</h2>
-            <p>
-                info here
-            </p>
-            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </div>
-    </div>*@
