--- a/PhotoHistory/Views/Photo/Create.cshtml
+++ b/PhotoHistory/Views/Photo/Create.cshtml
@@ -42,9 +42,11 @@
         @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(model => model.Image, new { Type = "File" })
-            @Html.ValidationMessageFor(model => model.Image)
+            @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
         </div>
     </div>
+
+        @Html.Partial("TagCreatePartial")
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
