--- a/PhotoHistory/Views/Shared/_LoginPartial.cshtml
+++ b/PhotoHistory/Views/Shared/_LoginPartial.cshtml
@@ -7,11 +7,9 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a href="@Url.Action("AccountSettings", "Account")" class="header-icon">
-                <img alt="Account" src="@Url.Content("~/PhotoHistory/Icons/user-128.png")" id="account-icon">
-            </a>
+        <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+
         </li>
-        @*<li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>*@
     </ul>
     }
 }
